<resources>
    <string name="app_name">Smart Shop</string>
    <string name="app_slogan">Find Your Things within Best Deal</string>
    <string name="account_button">Already Have an Account? Login</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="todo">TODO</string>
    <string name="join_now">Join now</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <string name="product_price">Product Price</string>
    <string name="add_product">Add Product</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="i_m_an_admin">I\'m an Admin?</string>
    <string name="i_m_not_an_admin">I\'m not an Admin?</string>
</resources>