<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminAddNewProductActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/select_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:cropToPadding="false"
            android:scaleType="centerInside"
            android:src="@drawable/select_product_image">

        </ImageView>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/select_product"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:hint="@string/product_name"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="#000000"
            android:textColorHint="#000">

        </com.google.android.material.textfield.TextInputEditText>

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/product_name"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/product_description"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:padding="20dp"
            android:textColor="#000000"
            android:textColorHint="#000"
            android:autofillHints="">

        </EditText>

        <EditText
            android:id="@+id/product_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_below="@+id/product_description"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="50dp"
            android:autofillHints=""
            android:hint="@string/product_price"
            android:inputType="textMultiLine"
            android:padding="20dp"
            android:textColor="#000000"
            android:textColorHint="#000">

        </EditText>

        <Button
            android:id="@+id/add_new_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/product_price"
            android:layout_marginTop="25dp"
            android:elevation="4dp"
            android:text="@string/add_product" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>